--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 /********************* NOTES ************************
-The basic resets below allow you to create your own styling
+the basic resets below allow you to create your own styling
 without having to fight some of the most annoying built in 
 agent user styles.
 ****************************************************/
